# Retro-Portfolio

./: .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-deploy.yml
.zed/: settings.json
public/book/: 404.md  A White World.md  Heast Messenger.md  Skys Horizon.md  Table Tennis.md  a-sailors-tale.md  a-white-world.md  data.json  heast-messenger.md  projects.md  running-heurigen.md  skys-horizon.md  squavy.md  table-tennis.md
public/book/about-me/: (web)-design.md  about-my-portfolio.md  learning-new-things.md  my-profile-picture.md  software-development.md
public/book/heast-messenger/: security-layers.md
public/book/skys-horizon/: back-to-minecraft.md  godot.md  history.md  minecraft.md  unity.md
public/book/table-tennis/: ecs.md
public/font/: bitmirror.eot
public/img/home/: Skyline.aseprite
public/music/: data.json
src/: App.tsx  index.tsx  lib.rs  markdown.css  style.css
src/components/: Chapter.tsx  Chapters.tsx  Footer.tsx  Limiter.tsx  Logo.tsx  Navbar.tsx  PixelImage.tsx  Styling.tsx  TypedText.tsx
src/components/book/: Button.tsx  Entry.tsx  MarkdownImage.tsx  Sidebar.tsx
src/components/home/: FullPage.tsx  Game.tsx  Graphics.tsx  (+1 more)
src/data/: Book.ts  Music.ts  Projects.ts  Projects.tsx
src/pages/: Book.tsx  Github.tsx  Home.tsx  Music.tsx  Projects.tsx  Songs.tsx
src/shaders/: globe.wgsl
temp/: Birds.aseprite  Notes.txt  Vines.aseprite
tools/: font_convert.js  preprocess_music.js
(+53 files in other folders)
