[package]
name = "portfolio-game"
version = "0.1.0"
authors = ["Fabian Hummel hum22501@spengergasse.at"]
description = "A wasm game for my portfolio"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]