[package]
name = "pixel-globe"
version = "0.1.0"
authors = ["Fabian Hummel fabianhummel22501@gmail.com"]
description = "A pixel globe for my portfolio"
license = "MIT/Apache-2.0"
edition = "2021"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
wasm-bindgen = { version = "0.2.92" }